--- a/misc/kitty/current-theme.conf
+++ b/misc/kitty/current-theme.conf
@@ -3,10 +3,9 @@ backgroun1 #1E1E2E
 background2 #13131d
 foreground #c4c4b5
 cursor #f6f6ec
-selection_background1 #343434
 selection_background #313244
 color0 #191919
-color8 #615e4b
+color8 #c4c4b5
 color1 #ff7070
 color9 #ff7070
 color2 #aae753
