--- a/misc/kitty/kitty.conf
+++ b/misc/kitty/kitty.conf
@@ -22,8 +22,8 @@ map ctrl+down neighboring_window down
 
 enabled_layouts grid
 
-map f1 copy_to_buffer a
-map f2 paste_from_buffer a
+#map f1 copy_to_buffer a
+#map f2 paste_from_buffer a
 cursor_beam_thickness 1.8
 
 mouse_hide_wait 3.0
@@ -41,7 +41,7 @@ tab_bar_margin_color black
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
 
-background_opacity 0.93
+#background_opacity 0.93
 
 map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
